--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "mysql": "^2.18.1",
+    "pg": "^8.3.3",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -60,6 +62,7 @@
     "eslint-plugin-react-hooks": "^4.1.0",
     "file-loader": "^6.0.0",
     "jest": "^26.2.2",
+    "newrelic": "^6.13.0",
     "nodemon": "^2.0.4",
     "react-svg-loader": "^3.0.3",
     "supertest": "^4.0.2",
